NXBT-2324: SWARM param default value

--- a/resources/docker-compose-swarm.yml
+++ b/resources/docker-compose-swarm.yml
@@ -4,7 +4,7 @@ services:
 
   swarm:
     build:
-       context: ${SWARM}/jenkins-slave-swarm
+       context: ${SWARM:-.}/jenkins-slave-swarm
        dockerfile: Dockerfile
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:rw
